--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
     <div class="container">
       <div id="root" class="weather-container"></div>
       <small
-        ><a href="https://github.com/Vladliena-Zaporozhenko" target="_blank"
+        ><a
+          href="https://github.com/Vladliena-Zaporozhenko/weather-react"
+          target="_blank"
           >Open-source code</a
         >, by Vladliena Zaporozhenko</small
       >
